# EvalOps-AI-Enterprise-LLM-Evaluation-Benchmarking-Platform

./: app.py  pyproject.toml  render.yaml
tests/test_core/test_datasets/: convo_goldens.csv  goldens.csv
