[tool.poetry.dependencies]
python = ">=3.11,<3.13"

requests = "^2.31.0"
tqdm = "^4.66.1"
pytest = "*"
pytest-xdist = "*"
pytest-repeat = "*"
pytest-rerunfailures = "*"
pytest-asyncio = "*"
tabulate = "^0.9.0"
sentry-sdk = "*"
rich = ">=13.6.0,<15.0.0"
portalocker = "*"
openai = "*"
aiohttp = "*"
typer = ">=0.9,<1.0.0"
click = ">=8.0.0,<8.4.0"
setuptools = "*"
wheel = "*"
nest_asyncio = "*"
tenacity = ">=8.0.0,<=10.0.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
grpcio = "^1.67.1"

posthog = [
    { version = ">=5.4.0,<7.0.0", python = "<3.10" },
    { version = ">=7.0.0,<8.0.0", python = ">=3.10" }
]

pyfiglet = "*"
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
jinja2 = "*"

textual = { version = ">=0.80,<2.0", optional = true }
pyperclip = { version = "^1.8", optional = true }
